feat: MVP ready for demo (strict auth, biometric gate, CLAHE+Sauvola+Skeleton, WebWorker, UI polish); API stubs and contracts included

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,7 @@ MONGODB_URI=
 NEXT_PUBLIC_NETWORK="polygon-mumbai"
 NEXT_PUBLIC_DIDS_ADDRESS=
 NEXT_PUBLIC_CREDENTIAL_REGISTRY_ADDRESS=
+JWT_SECRET=
+BIOMETRIC_KEY=
 CONTRACT_PRIVATE_KEY=
 RPC_URL_MUMBAI=
