--- a/.env.local
+++ b/.env.local
@@ -4,5 +4,8 @@ NEXT_PUBLIC_DIDS_ADDRESS=
 NEXT_PUBLIC_CREDENTIAL_REGISTRY_ADDRESS=
 PINATA_JWT=
 MONGODB_URI=
+JWT_SECRET=
+# base64 32-byte key, e.g. from: node -e "console.log(require('crypto').randomBytes(32).toString('base64'))"
+BIOMETRIC_KEY=
 CONTRACT_PRIVATE_KEY=
 RPC_URL_MUMBAI=
