--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
     "ethers": "^6.15.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^7.0.0",
     "next": "16.0.2",
     "qrcode.react": "^4.2.0",
@@ -19,7 +22,8 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
     "zod": "^4.1.12",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
